finish implementing md5 algo version for initial testing

--- a/src/main/webapp/WEB-INF/views/hashing.html
+++ b/src/main/webapp/WEB-INF/views/hashing.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <p>this is hashing page</p>
-  <p th:text="'this is binary string - ' + ${binaryMessage}"></p>
+  <p th:text="'this is hash - ' + ${hash}"></p>
 </body>
 </html>
