trying to fix bugs

--- a/src/main/webapp/WEB-INF/views/hashing.html
+++ b/src/main/webapp/WEB-INF/views/hashing.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <p>this is hashing page</p>
+  <p th:text="'this is binary message' +  ${binaryMessage}"></p>
   <p th:text="'this is hash - ' + ${hash}"></p>
 </body>
 </html>
